src/App.css
.App {
  text-align: center;
}

.navbar {
  display: flex;
  justify-content: space-around;
  align-items: center;
  height: 8vh;
  font-family: 'Montserrat', sans-serif;
  background-color: #003366;
}

.navbar-links {
  color: rgb(226, 226, 226);
  list-style: none;
  display: flex;
  justify-content: space-around;
  width: 35%;
  font-size: 14px;
  font-weight: bold;
}

.name {
  color: rgb(226, 226, 226);
  text-transform: uppercase;
  letter-spacing: 2px;
  font-size: 17px;
}

.burger {
  display: none;
}

.burger div {
  width: 25px;
  height: 3px;
  background-color: rgb(226, 226, 226);
  margin: 5px;
  transition: all 0.3s ease;
}

.resume-container {
  display: flex;
  justify-content: center;
}

.resume-pdf {
  margin-top: 20px;
}

@media screen and (max-width: 768px) {
  body {
    overflow-x: hidden;
  }
  .navbar-links {
    position: absolute;
    right: 0px;
    height: 92vh;
    top: 6vh;
    background-color: #003366;
    display: flex;
    flex-direction: column;
    align-items: center;
    width: 50%;
    transform: translateX(100%);
    transition: transform 0.5s ease-in;
  }

  .burger {
    display: block;
    cursor: pointer;
  }

  .line1.active {
    transform: rotate(-45deg) translate(-5px, 6px);
  }
  .line2.active {
    opacity: 0;
  }
  .line3.active {
    transform: rotate(45deg) translate(-5px, -6px);
  }
}

@media screen and (max-width: 1024px) {
  .navbar-links {
    width: 60%;
  }
}

.navbar-links.active {
  transform: translateX(0%);
}

